<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/linearLayout">

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/actMain_btLoginFacebook"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/btn_facebook"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_16"
                android:text="Entre com o Facebook" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/actMain_btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/login_with_email"
                android:textColor="@color/white"/>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actMain_viewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:textColor="@color/main_color"
            android:text="@string/str_link_to_register"
            android:textSize="@dimen/text_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color_darker"
            android:text="@string/str_register_now"
            android:textSize="@dimen/text_16"/>
    </LinearLayout>

</RelativeLayout>