<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_4"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/actionBar_imBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-15dp"
        android:layout_marginStart="-15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/con_des_back"/>

    <LinearLayout
        android:id="@+id/actionBar_viewDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/actionBar_tvCountUnreadChats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_16" />

        <com.daniel0x7cc.chatify.customviews.RoundedImageView
            android:id="@+id/actionBar_imAvatar"
            android:layout_width="@dimen/avatar_actionbar"
            android:layout_height="@dimen/avatar_actionbar"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/actionBar_tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/actionBar_tvOnline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_12"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:visibility="visible"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionBar_viewMsgSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/actionBar_tvCountMsgCopied"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_16" />

        <ImageView
            android:id="@+id/actionBar_imDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:contentDescription="@string/con_des_delete"
            android:src="@drawable/icon_delete_message" />

        <ImageView
            android:id="@+id/actionBar_imCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:contentDescription="@string/con_des_copy"
            android:src="@drawable/icon_copy_message" />

        <ImageView
            android:id="@+id/actionBar_imForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_8"
            android:paddingLeft="@dimen/margin_8"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:contentDescription="@string/con_des_forward"
            android:src="@drawable/icon_forward_message" />
    </LinearLayout>


</LinearLayout>
