<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center">
            <ListView
                android:id="@+id/fraSearchPeople_lvUsers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:visibility="gone" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/fraSearchPeople_imEnableGps"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/fraSearchPeople_tvEnableGps"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_location_off"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/fraSearchPeople_tvEnableGps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:textSize="@dimen/text_18"
        android:text="@string/gps_disabled"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/fraPets_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/fraSearchPeople_viewSearching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/fraSearchPeople_imGpsEnabled"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_location_on" />

            <TextView
                android:id="@+id/fraSearchPeople_tvSearchingUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_16"
                android:textColor="@color/gray_holo_dark"
                android:text="@string/searching_users_nearby" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fraPets_viewEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/gray_holo_dark"-->
            <!--android:src="@mipmap/ic_dog_empty"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_18"
            android:textColor="@color/gray_holo_dark"
            android:text="@string/nobody_nearby"/>
    </LinearLayout>

</RelativeLayout>