<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/actChat_progressLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_4"
                android:background="@drawable/sendbird_img_shadow" />

            <se.emilsjolander.stickylistheaders.StickyListHeadersListView
                android:id="@+id/actChat_listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:transcriptMode="normal" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:paddingTop="6dp">

            <LinearLayout
                android:id="@+id/actChat_viewMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_54"
                android:layout_marginRight="@dimen/margin_54"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/actChat_imUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#00000000"
                    android:src="@drawable/icon_attach"
                    android:contentDescription="@string/file_was_attached"/>

                <ProgressBar
                    android:id="@+id/actChat_progressUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-5dp"
                    android:layout_marginLeft="-5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="-5dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/actChat_etMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1.50"
                    android:autoLink="all"
                    android:textCursorDrawable="@drawable/message_cursor"
                    android:background="@drawable/bg_input_message"
                    android:clickable="true"
                    android:gravity="center_vertical|end|start"
                    android:hint="@string/type_hint_message"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLines="10"
                    android:paddingLeft="@dimen/margin_8"
                    android:paddingRight="@dimen/margin_8"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/actChat_audio"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/margin_54"
                android:layout_marginRight="@dimen/margin_54"
                android:orientation="horizontal"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp">

                    <ImageView
                        android:id="@+id/actChat_imAudioRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_microfone"
                        android:contentDescription="@string/str_recording_audio"/>

                    <TextView
                        android:id="@+id/actChat_recordingTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:layout_marginStart="@dimen/margin_8"
                        android:maxLines="1"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/text_16" />
                </LinearLayout>

                <TextView
                    android:id="@+id/actChat_tvSlideToCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_32"
                    android:layout_marginStart="@dimen/margin_32"
                    android:drawableLeft="@drawable/slidearrow"
                    android:drawablePadding="@dimen/margin_4"
                    android:drawableStart="@drawable/slidearrow"
                    android:maxLines="1"
                    android:text="@string/str_swipe_to_cancel"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/actChat_imAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_microfone"
        android:contentDescription="@string/inf_send"/>

    <ImageButton
        android:id="@+id/actChat_imMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="@dimen/margin_4"
        android:layout_marginRight="@dimen/margin_4"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:src="@drawable/ic_send_message"
        android:contentDescription="@string/inf_send"/>
</FrameLayout>